##Text encoding: utf-8

2011-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/bondtool.cc: fix hashes orientation.
	* themes/paint/Gcp-Modern: better hashes.

2011-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcpapp.cc: fix an alignment issue.
	* libs/gcp/document.cc: fix alignment with several children
	* libs/gcp/mechanism-step.cc: don't save an empty step.
	* libs/gcp/mechanism-step.h: ditto.
	* libs/gcp/reaction-step.cc: don't create empty steps.
	* libs/gcp/target.cc: remove signals when destroyed.
	* libs/gcp/target.h: ditto.
	* libs/gcu/object.cc: accept unsaved children in Object::SaveChildren().
	* plugins/paint/bonds/bondtool.cc: fixed an item position issue.

2011-02-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: allow for minus charge in the middel of a string.

2011-02-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: new comment.
	* libs/gcp/reaction-step.cc: more undo fix in reactions with curved arrows.

2011-02-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: don't add new molecules when undoing a
	mechanism arrow deletion. [#32433]

2011-02-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: new CTfiles loader plugin.
	* plugins/loaders/ctfiles/Makefile.am: ditto.
	* plugins/loaders/ctfiles/ctfiles.cc: ditto.
	* plugins/loaders/ctfiles/plugin.xml.in: ditto.
	* other files: updated copyright.

2011-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/paint/main.cc: try to save changed files on crashing.
	* programs/paint/standaloneapp.cc: ditto.
	* programs/paint/standaloneapp.h: ditto.

2011-02-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: request OpenBabel >= 2.3.0.
	* libs/gcp/Makefile.am: export molecules to avogadro and gchem3d.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/application.h: ditto.
	* libs/gcp/molecule.cc: ditto.